--- a/workshop/content/nationalparks-dotnet-pipeline.adoc
+++ b/workshop/content/nationalparks-dotnet-pipeline.adoc
@@ -140,19 +140,14 @@ spec:
         - fetch-repository
       taskRef:
         kind: ClusterTask
-        name: s2i-dotnet-3
+        name: s2i-dotnet
       workspaces:
         - name: source
           workspace: workspace
     - name: deploy
       params:
         - name: SCRIPT
-          value: kubectl $@
-        - name: ARGS
-          value:
-            - rollout
-            - status
-            - deploy/$(params.APP_NAME)
+          value: oc rollout status deploy/$(params.APP_NAME)
       runAfter:
         - build
       taskRef:
