Fixed broken links
The link to OpenShift For Developers book was broken, so updated to the general All e-books link which includes the OpenShift for Developers book, but thought it also has others which will be of interest for people.

--- a/workshop/content/common-further-resources.adoc
+++ b/workshop/content/common-further-resources.adoc
@@ -36,7 +36,7 @@ Hat supported OpenShift on Developer Sandbox, Managed and Self-Managed offering.
 The following free online eBooks are also available for download related to
 OpenShift.
 
-* *link:https://www.openshift.com/for-developers/[OpenShift
+* *link:https://developers.redhat.com/e-books[OpenShift
 for Developers]*
 
 image::images/further-resources-openshift-for-developers.png[OpenShift for Developers]
