--- a/workshop/content/nationalparks-dotnet-codechanges-gogs.adoc
+++ b/workshop/content/nationalparks-dotnet-codechanges-gogs.adoc
@@ -52,7 +52,7 @@ this out.
 == Exercise: Using Gogs Web Hooks
 Click the *Files* tab in Gogs. This is Gogs's repository view. 
 
-CAUTION: Make sure that the drop-down menu at the upper right is set for 
+CAUTION: Make sure that the drop-down menu at the upper left is set for 
 the *`master`* branch. Navigate to the
 following path:
 
