--- a/workshop/content/nationalparks-javascript-databases.adoc
+++ b/workshop/content/nationalparks-javascript-databases.adoc
@@ -206,7 +206,7 @@ a browser problem, and the application is working properly.
 
 [source,bash,role=copypaste]
 ----
-https://parksmap-{{ project_namespace }}.{{cluster_subdomain}}
+http://parksmap-{{ project_namespace }}.{{cluster_subdomain}}
 ----
 
 Hmm... There's just one thing. The main map **STILL** isn't displaying the parks.
@@ -305,7 +305,7 @@ If you check your browser now:
 
 [source,bash]
 ----
-https://parksmap-{{ project_namespace }}.{{cluster_subdomain}}/
+http://parksmap-{{ project_namespace }}.{{cluster_subdomain}}/
 ----
 
 image::images/nationalparks-databases-new-parks.png[MongoDB]
